--- a/InterpolationCode/random forest interpolation/final RF interpolation.Rmd
+++ b/InterpolationCode/random forest interpolation/final RF interpolation.Rmd
@@ -269,13 +269,17 @@ water20 <- water20 %>%
          TN = case_when(is.na(TN) ~ predicted_TN,
                         TRUE ~ TN),
          VEL = case_when(is.na(VEL) ~ predicted_VEL,
-                        TRUE ~ VEL)) %>%
-  select(-predicted_TP, -predicted_TN, -predicted_VEL)
+                        TRUE ~ VEL)) 
 
-water20 <- water20 %>%
-  filter_all(all_vars(!is.na(.))) 
+write.csv(water20, "../../LTRM data/RF interpolation/water_allcols.csv", row.names = FALSE)
 
-write.csv(water20, "../../LTRM data/water_final_interpolated.csv", row.names = FALSE)
-  
+water20 <- water20 %>% select(-predicted_TP, -predicted_TN, -predicted_VEL)
+
+write.csv(water20, "../../LTRM data/RF interpolation/water_combinedcols.csv", row.names = FALSE)
+
+water20 <- water20 %>% filter_all(all_vars(!is.na(.)))
+
+write.csv(water20, "../../LTRM data/RF interpolation/water_full.csv", row.names = FALSE)
+
 ```
 
