--- a/InterpolationCode/Imputation_Regression.ipynb
+++ b/InterpolationCode/Imputation_Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "happy-intake",
+   "id": "adapted-galaxy",
    "metadata": {},
    "source": [
     "## Running regression again with median imputation"
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "searching-bradford",
+   "execution_count": 2,
+   "id": "beautiful-foster",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,8 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "informed-princess",
+   "execution_count": 19,
+   "id": "bound-server",
    "metadata": {},
    "outputs": [
     {
@@ -72,8 +72,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "adjusted-walter",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56179"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "water_data[\"VEL\"].notna().sum()"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "optional-monitor",
+   "id": "missing-welcome",
    "metadata": {},
    "source": [
     "Looking at extreme outliers for model building, then removing them"
@@ -81,8 +102,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
-   "id": "convenient-purple",
+   "execution_count": 4,
+   "id": "painted-labor",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +123,7 @@
        "Name: TN, Length: 82478, dtype: float64"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +134,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "national-breast",
+   "id": "sticky-medicine",
    "metadata": {},
    "source": [
     "Example for imputing medians into each column, not used after ambers suggesting of imputing separately"
@@ -122,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "unlike-blond",
+   "id": "skilled-luxury",
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +189,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diagnostic-horizon",
+   "id": "adapted-glasgow",
    "metadata": {},
    "source": [
     "Water dataset has no missing variables in any variable"
@@ -177,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "empty-literacy",
+   "id": "mature-insert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "interesting-christian",
+   "id": "instant-journey",
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "institutional-figure",
+   "id": "foreign-morris",
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "ordered-smoke",
+   "id": "naval-assumption",
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +297,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "mexican-television",
+   "id": "quality-lexington",
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "remarkable-healthcare",
+   "id": "corporate-steps",
    "metadata": {},
    "outputs": [
     {
@@ -317,8 +338,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "id": "closing-hundred",
+   "execution_count": 5,
+   "id": "connected-replica",
    "metadata": {},
    "outputs": [
     {
@@ -329,44 +350,38 @@
       "-----------------------------------\n",
       "Building model for  TN\n",
       "Imputing medians for training set\n",
+      "Number of imputed for X_train,  TP   625\n",
+      "Number of imputed for X_train,  TEMP   57\n",
+      "Number of imputed for X_train,  DO   106\n",
+      "Number of imputed for X_train,  TURB   93\n",
+      "Number of imputed for X_train,  COND   73\n",
+      "Number of imputed for X_train,  VEL   8326\n",
+      "Number of imputed for X_train,  SS   638\n",
+      "Number of imputed for X_train,  WDP   535\n",
+      "Number of imputed for X_train,  CHLcal   159\n",
+      "Number of imputed for X_train,  SECCHI   573\n",
       "Imputing medians for test set\n",
-      "Degree 1 polynomial has RMSE = 1.17639\n",
-      "Degree 1 polynomial has MAE = 0.85433\n",
-      "\n",
-      "-----------------------------------\n",
-      "Building model for  TN\n",
-      "Imputing medians for training set\n",
-      "Imputing medians for test set\n",
-      "Degree 2 polynomial has RMSE = 1.12375\n",
-      "Degree 2 polynomial has MAE = 0.81562\n",
-      "\n",
-      "-----------------------------------\n",
-      "Building model for  TP\n",
-      "Imputing medians for training set\n",
-      "Imputing medians for test set\n",
-      "Degree 1 polynomial has RMSE = 0.12826\n",
-      "Degree 1 polynomial has MAE = 0.06691\n",
-      "\n",
-      "-----------------------------------\n",
-      "Building model for  TP\n",
-      "Imputing medians for training set\n",
-      "Imputing medians for test set\n",
-      "Degree 2 polynomial has RMSE = 0.12189\n",
-      "Degree 2 polynomial has MAE = 0.05733\n",
-      "\n",
-      "-----------------------------------\n",
-      "Building model for  VEL\n",
-      "Imputing medians for training set\n",
-      "Imputing medians for test set\n",
-      "Degree 1 polynomial has RMSE = 0.29541\n",
-      "Degree 1 polynomial has MAE = 0.17508\n",
-      "\n",
-      "-----------------------------------\n",
-      "Building model for  VEL\n",
-      "Imputing medians for training set\n",
-      "Imputing medians for test set\n",
-      "Degree 2 polynomial has RMSE = 0.27543\n",
-      "Degree 2 polynomial has MAE = 0.16164\n"
+      "Number of imputed for X_test,  TP   132\n",
+      "Number of imputed for X_test,  TEMP   145\n",
+      "Number of imputed for X_test,  DO   170\n",
+      "Number of imputed for X_test,  TURB   194\n",
+      "Number of imputed for X_test,  COND   208\n",
+      "Number of imputed for X_test,  VEL   2249\n",
+      "Number of imputed for X_test,  SS   2408\n",
+      "Number of imputed for X_test,  WDP   2538\n",
+      "Number of imputed for X_test,  CHLcal   2586\n",
+      "Number of imputed for X_test,  SECCHI   2714\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-5-0af492179cae>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     67\u001b[0m         \u001b[0mX_test_scaled\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mscaler\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtransform\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     68\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m         \u001b[0mpickle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mscaler\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"scaler.p\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m\"wb\"\u001b[0m \u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m         \u001b[1;31m# Save train and test sets\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'path' is not defined"
      ]
     }
    ],
@@ -404,16 +419,20 @@
     "            median = np.nanmedian([item[index] for item in X_train])\n",
     "            #print(\"Median for \",predictor,\" is \",round(median,4))\n",
     "            # Loop through the index of each indice looking for nan, replace with median\n",
+    "            numimputed = 0\n",
     "            for item in X_train:\n",
     "                if np.isnan(item[index]):\n",
     "                    # Impute median\n",
     "                    item[index] = median\n",
+    "                    numimputed += 1\n",
+    "            print(\"Number of imputed for X_train, \",predictor,\" \",numimputed)\n",
     "                    \n",
     "            curvar = [item[index] for item in X_train]\n",
     "            assert not any(np.isnan(curvar)), \"Imputation didn't work\"\n",
     "        \n",
     "        print(\"Imputing medians for test set\")\n",
     "        # Impute medians for X_test\n",
+    "        numimputed = 0\n",
     "        for index,predictor in enumerate(predictors):\n",
     "            median = np.nanmedian([item[index] for item in X_test])\n",
     "            #print(\"Median for \",predictor,\" is \",round(median,4))\n",
@@ -422,6 +441,9 @@
     "                if np.isnan(item[index]):\n",
     "                    # Impute median\n",
     "                    item[index] = median\n",
+    "                    numimputed += 1\n",
+    "                    \n",
+    "            print(\"Number of imputed for X_test, \",predictor,\" \",numimputed)\n",
     "                    \n",
     "            curvar = [item[index] for item in X_test]\n",
     "            assert not any(np.isnan(curvar)), \"Imputation didn't work\"\n",
@@ -463,7 +485,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "grand-miami",
+   "id": "innovative-season",
    "metadata": {},
    "outputs": [],
    "source": []
